# deadbeef-playlog

./: Cargo.toml  README.md  build.rs  deadbeef.h  server-example.py
src/: api.rs  event.rs  lib.rs  publisher.rs  sys.rs
