[package]
name = "deadbeef-playlog"
version = "0.1.0"
authors = ["Ross Nomann <rossnomann@protonmail.com>"]
edition = "2018"

[lib]
name = "playlog"
crate-type = ["cdylib"]

[dependencies]
ffix = "0.1.0"
hmac = "0.7.1"
hex = "0.4.2"
libc = "0.2.68"
reqwest = { version = "0.10.4", features = ["blocking"] }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
sha2 = "0.8.1"

[build-dependencies]
bindgen = "0.53.2"
